@@ -23,123 +23,38 @@
 
 #include "packets.h"
 
+/* packet length table borrowed from wolfpack */
 const size_t packet_lengths[0x100] = {
-    [0x0B] = 7,
-    [0xBA] = 6,
-    [0xBA] = 6,
-    [0x25] = 20,
-    [0x24] = 7,
-    [0x3B] = 8,
-    [0x3B] = 8,
-    [0xAF] = 13,
-    [0xC8] = 2,
-    [0xAA] = 5,
-    [0x95] = 9,
-    [0xC9] = 6,
-    [0xCA] = 6,
-    [0x2C] = 2,
-    [0xC6] = 1,
-    [0x4F] = 2,
-    [0x4E] = 6,
-    [0x4E] = 6,
-    [0x2E] = 15,
-    [0x27] = 2,
-    [0xD1] = 2,
-    [0x65] = 4,
-    [0x97] = 2,
-    [0xCB] = 7,
-    [0xC7] = 49,
-    [0xC7] = 49,
-    [0xC0] = 36,
-    [0xC0] = 36,
-    [0x85] = 2,
-    [0xC0] = 36,
-    [0xC0] = 36,
-    [0xC0] = 36,
-    [0x24] = 7,
-    [0x24] = 7,
-    [0x25] = 20,
-    [0x72] = 5,
-    [0x2F] = 10,
-    [0x1D] = 5,
-    [0x1D] = 5,
-    [0x76] = 16,
-    [0x7B] = 2,
-    [0x77] = 17,
-    [0x99] = 26,
-    [0x6C] = 19,
-    [0x6C] = 19,
-    [0x23] = 26,
-    [0x88] = 66,
-    [0x53] = 2,
-    [0x54] = 12,
-    [0x6D] = 3,
-    [0x5B] = 4,
-    [0xBC] = 3,
-    [0xB9] = 3,
-    [0xA1] = 9,
-    [0xA1] = 9,
-    [0xA2] = 9,
-    [0xA2] = 9,
-    [0xA3] = 9,
-    [0xA3] = 9,
-    [0x2D] = 17,
-    [0x2D] = 17,
-    [0x38] = 7,
-    [0x6E] = 14,
-    [0x20] = 19,
-    [0x73] = 2,
-    [0x21] = 8,
-    [0x22] = 3,
-    [0x1B] = 37,
-    [0x55] = 1,
-    [0x82] = 2,
-    [0x15] = 9,
-    [0x2B] = 2,
-    [PCK_Relay] = 11,
-    [0x00] = 104,
-    [0x01] = 5,
-    [0x02] = 7,
-    [0x04] = 2,
-    [0x05] = 5,
-    [0x06] = 5,
-    [0x07] = 7,
-    [0x08] = 14,
-    [0x09] = 5,
-    [0x0A] = 11,
-    [0x13] = 10,
-    [0x14] = 6,
-    [0x22] = 3,
-    [0x2C] = 2,
-    [0x34] = 10,
-    [0x47] = 11,
-    [0x48] = 73,
-    [0x58] = 106,
-    [0x5D] = 73,
-    [0x61] = 9,
-    [0x6C] = 19,
-    [0x72] = 5,
-    [0x73] = 2,
-    [0x75] = 35,
-    [0x79] = 9,
-    [0x7E] = 2,
-    [0x7D] = 13,
-    [0x80] = 62,
-    [0x83] = 39,
-    [0x91] = 65,
-    [0x95] = 9,
-    [0x9B] = 258,
-    [0x9D] = 51,
-    [0xA0] = 3,
-    [0xA4] = 149,
-    [0xA7] = 4,
-    [0xB5] = 64,
-    [0xB6] = 9,
-    [0xBB] = 9,
-    [0xC8] = 2,
-    [0xC9] = 6,
-    [0xCA] = 6,
-    [0xcf] = 62,
-    [0xD1] = 2,
-    [PCK_AOSObjProp] = 9,
+    0x0068, 0x0005, 0x0007, 0x0000, 0x0002, 0x0005, 0x0005, 0x0007, // 0x00
+    0x000e, 0x0005, 0x0007, 0x010a, 0x0000, 0x0003, 0x0000, 0x003d, // 0x08
+    0x00d7, 0x0000, 0x0000, 0x000a, 0x0006, 0x0009, 0x0001, 0x0000, // 0x10
+    0x0000, 0x0000, 0x0000, 0x0025, 0x0000, 0x0005, 0x0004, 0x0008, // 0x18
+    0x0013, 0x0008, 0x0003, 0x001a, 0x0007, 0x0014, 0x0005, 0x0002, // 0x20
+    0x0005, 0x0001, 0x0005, 0x0002, 0x0002, 0x0011, 0x000f, 0x000a, // 0x28
+    0x0005, 0x0001, 0x0002, 0x0002, 0x000a, 0x028d, 0x0000, 0x0008, // 0x30
+    0x0007, 0x0009, 0x0000, 0x0000, 0x0000, 0x0002, 0x0025, 0x0000, // 0x38
+    0x00c9, 0x0000, 0x0000, 0x0229, 0x02c9, 0x0005, 0x0000, 0x000b, // 0x40
+    0x0049, 0x005d, 0x0005, 0x0009, 0x0000, 0x0000, 0x0006, 0x0002, // 0x48
+    0x0000, 0x0000, 0x0000, 0x0002, 0x000c, 0x0001, 0x000b, 0x006e, // 0x50
+    0x006a, 0x0000, 0x0000, 0x0004, 0x0002, 0x0049, 0x0000, 0x0031, // 0x58
+    0x0005, 0x0009, 0x000f, 0x000d, 0x0001, 0x0004, 0x0000, 0x0015, // 0x60
+    0x0000, 0x0000, 0x0003, 0x0009, 0x0013, 0x0003, 0x000e, 0x0000, // 0x68
+    0x001c, 0x0000, 0x0005, 0x0002, 0x0000, 0x0023, 0x0010, 0x0011, // 0x70
+    0x0000, 0x0009, 0x0000, 0x0002, 0x0000, 0x000d, 0x0002, 0x0000, // 0x78
+    0x003e, 0x0000, 0x0002, 0x0027, 0x0045, 0x0002, 0x0000, 0x0000, // 0x80
+    0x0042, 0x0000, 0x0000, 0x0000, 0x000b, 0x0000, 0x0000, 0x0000, // 0x88
+    0x0013, 0x0041, 0x0000, 0x0063, 0x0000, 0x0009, 0x0000, 0x0002, // 0x90
+    0x0000, 0x001a, 0x0000, 0x0102, 0x0135, 0x0033, 0x0000, 0x0000, // 0x98
+    0x0003, 0x0009, 0x0009, 0x0009, 0x0095, 0x0000, 0x0000, 0x0004, // 0xA0
+    0x0000, 0x0000, 0x0005, 0x0000, 0x0000, 0x0000, 0x0000, 0x000d, // 0xA8
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0040, 0x0009, 0x0000, // 0xB0
+    0x0000, 0x0003, 0x0006, 0x0009, 0x0003, 0x0000, 0x0000, 0x0000, // 0xB8
+    0x0024, 0x0000, 0x0000, 0x0000, 0x0006, 0x00cb, 0x0001, 0x0031, // 0xC0
+    0x0002, 0x0006, 0x0006, 0x0007, 0x0000, 0x0001, 0x0000, 0x004e, // 0xC8
+    0x0000, 0x0002, 0x0019, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, // 0xD0
+    0x0000, 0x010C, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, // 0xD8
+    0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, // 0xE0
+    0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, // 0xE8
+    0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, // 0xF0
+    0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, 0xFFFF, // 0xF8
 };
